# my-aws-agent

./: README.md
Agents/MyAgent1/: AGENTS.md  README.md
Agents/MyAgent1/agentcore/: agentcore.json  aws-targets.json
Agents/MyAgent1/agentcore/.cli/: deployed-state.json
Agents/MyAgent1/agentcore/.llm-context/: agentcore.ts
Agents/MyAgent1/agentcore/cdk/: package-lock.json  package.json
Agents/MyAgent1/agentcore/cdk/lib/: cdk-stack.ts
Agents/MyAgent1/agentcore/cdk/test/: cdk.test.ts
Agents/MyAgent1/app/MyAgent1/: .gitignore  main.py  pyproject.toml
Agents/MyAgent1/app/MyAgent1/model/: load.py
Agents/MyAgent1/app/MyAgent1/skills/: fetcher.py
