[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MyAgent1"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "botocore[crt] >= 1.35.0",
    "mcp >= 1.19.0",
    "strands-agents >= 1.15.0",
    
]

[tool.hatch.build.targets.wheel]
packages = ["."]
